--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
-    "node-fetch": "^3.2.6"
+    "node-fetch": "^3.2.6",
+    "opusscript": "^0.0.8"
   }
 }
